Fixed navigation with menu: no longer reload page when clicking logo, margins for anchors fixed on small screens.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@ body {
 	max-width: 960px;
 	min-width: 320px;
 	vertical-align: middle;
-	margin: 70px auto 0 auto;
+	margin: 0 auto;
 	background-color:black ;  
 	font-family: 'Roboto', sans-serif;
 	font-size: 100%;
@@ -57,6 +57,11 @@ a.anchor {
     position: relative;
     top: -70px;
     visibility: hidden;
+}
+
+#home.anchor {
+	position: absolute;
+	top: 0;
 }
 
 .lp-brown {
